fix: correct weird sizing and odd off-center centering

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --bubble-text-color: black;
 
     background-color: var(--background-color);
+    font-family: "Times New Roman", serif;
 }
 
 #pageBody {
